Capítulo de Vetores no Plano
Adição do capítulo de vetores e atualizações no capítulo de Pensamento Computacional

--- a/aluno.tex
+++ b/aluno.tex
@@ -12,7 +12,7 @@
 % \include{capa-afim}
 % \setcounter{chapter}{2}
 % \include{capa-quadraticas}
-% \include{chapters/vetores-novo1}         
+% \include{chapters/vetores}         
 % \include{chapters/perspectiva1} 
 % \include{chapters/perspectiva2}
 % \include{chapters/funcoes}
@@ -36,8 +36,8 @@
 % \include{chapters/superficie}
 % \include{chapters/trigonometria}
 % \include{chapters/combinatoria}
-% \include{chapters/computacional}
-\include{chapters/transformacoes}
+\include{chapters/computacional}
+% \include{chapters/transformacoes}
 
 % \include{chapters/logaritmosMD_bibliografia}
 % \renewcommand{\indexname}{Índice}
