--- a/professor.tex
+++ b/professor.tex
@@ -15,7 +15,7 @@
 % \include{capa-afim}
 % \setcounter{chapter}{2}
 % \include{capa-quadraticas}
-% \include{chapters/vetores-novo1}        
+% \include{chapters/vetores}        
 % \include{chapters/perspectiva1} 
 % \include{chapters/perspectiva2}
 % \include{chapters/funcoes}
