--- a/aluno.tex
+++ b/aluno.tex
@@ -35,8 +35,8 @@
 % \include{chapters/investigacao}
 % \include{chapters/superficie}
 % \include{chapters/trigonometria}
-% \include{chapters/combinatoria}
-\include{chapters/computacional}
+\include{chapters/combinatoria}
+% \include{chapters/computacional}
 % \include{chapters/transformacoes}
 
 % \include{chapters/logaritmosMD_bibliografia}
