--- a/professor.tex
+++ b/professor.tex
@@ -38,8 +38,8 @@
 % \include{chapters/investigacao}
 % \include{chapters/superficie}
 % \include{chapters/trigonometria}
-% \include{chapters/combinatoria}
-\include{chapters/computacional}
+\include{chapters/combinatoria}
+% \include{chapters/computacional}
 % \include{chapters/transformacoes}
 
 % \newgeometry{textwidth=840pt,outer=50pt, top=2cm}
