Unidades de Medida
Adição do capítulo de Unidades de Medida e correções no capítulo de Logaritmos

--- a/Bibliografia/exponencial_bibliografia.bib
+++ b/Bibliografia/exponencial_bibliografia.bib
@@ -115,11 +115,13 @@ pages = {372-384},
 address = {}
 }
 
-@misc{BNCC2018,
-	author = {Brasil},
-	title = {Base Nacional Comum Curricular (BNCC)},
-	year = {2018},
-	publisher = {Ministério da Educação},
+ @manual{BNCC2018,
+  author = {Brasil},
+  title = {Base Nacional Comum Curricular},
+  year = {2018},
+  organization = {Ministério da Educação},
+  note = {Disponível em: \url{http://basenacionalcomum.mec.gov.br}},
+  address = {Brasília, Brasil}
 }
 
 
