--- a/Bibliografia/logaritmos_bibliografia.bib
+++ b/Bibliografia/logaritmos_bibliografia.bib
@@ -145,7 +145,7 @@ address = {Nova Iorque, Estados Unidos}
  year = {2018},
  publisher = {Edição do autor},
  address = {Curitiba, Brasil},
- note = {Disponível em: http://paginapessoal.utfpr.edu.br/marcioadames/pesquisa}
+ note = {Disponível em: \url{http://paginapessoal.utfpr.edu.br/marcioadames/pesquisa}}
  }
 
 @misc{misc,
