--- a/Bibliografia/trigonometria_bibliografia.bib
+++ b/Bibliografia/trigonometria_bibliografia.bib
@@ -15,7 +15,7 @@
  address = {Nova Iorque, Estados Unidos},
  }
 
- @book{Eves1995,
+ @book{eves1995a,
   title={College Geometry},
   author={Howard Whitley Eves},
   url={https://books.google.com.br/books?id=B81gnTjNazMC},
@@ -75,4 +75,187 @@ author = "Daniel F. Mansfield and N.J. Wildberger",
  publisher = {Gradiva},
  year = {2002},
  address = {Lisboa, Portugal},
-  }
+ }
+
+
+%%%%%%%%%%%%%%% Professor
+
+ @manual{BNCC2018,
+	author = {Brasil},
+	title = {Base Nacional Comum Curricular},
+	year = {2018},
+	organization = {Ministério da Educação},
+	note = {Disponível em: \url{http://basenacionalcomum.mec.gov.br}},
+	address = {Brasília, Brasil}
+}
+
+@book{boyer1974,
+	author = {Carl Benjamin Boyer},
+	title = {História da Matemática},
+	address = {São Paulo, Brasil},
+	year = {1974},
+	publisher = {Blucher}
+}
+
+@article{bressoud2010,
+	author = {Bressoud, David M.},
+	title = {Historical reflections o teaching trigonometry},
+	journal = {The Matematics Teacher},
+	publisher = {National Council of Teachers of Mathematics},
+	volume = {104},
+	number = {2},
+	year = {2010},
+	pages = {106-112},
+	address = {Virgínia, Estados Unidos}
+}
+
+@phdthesis{brown2005,
+	author = {Brown, Susan A.},
+	title = {The trigonometric connection: Students' understanding of sine and cosine},
+	school = {Illinois State University},
+	year = {2005},
+	address = {Illinois, Estados Unidos}	
+}
+
+@conference{chigonga2016,
+author = {Chigonga, Benard},
+year = {2016},
+month = {10},
+pages = {163-176},
+title = {Learners' errors when solving trigonometric equations and suggested interventions from Grade 12 Mathematics teachers},
+booktitle = {ISTE Conference: Mathematics, Science and Technology Education},
+organization = {University of South Africa}
+}
+
+@mastersthesis{costa1997,
+	author = {Nielce Meneguelo Lobo da Costa},
+	year = {1997},
+	school = {Pontifícia Universidade Católica de São Paulo},
+	title = {Funções Seno e Cosseno: Uma seqüência de ensino a partir dos contextos do "Mundo Experimental" e do Computador},
+	address = {São Paulo, Brasil}
+}
+
+@book{coutinho2001,
+	author = {Lázaro Coutinho},
+	title = {Convite às geometrias não-euclidianas},
+	year = {2001},
+	publisher = {Editora Interciência},
+	address = {Rio de Janeiro, Brasil}
+}
+
+@conference{dioniziobrandt2011,
+	author = {Dionizio, Fátima Queiroz and Brandt, Célia Finck},
+	title = {Análise das dificuldades apresentadas pelos alunos do ensino médio em trigonometria},
+	booktitle = {X Congresso Nacional de Educação - EDUCERE},
+	organization = {Pontifícia Universidade Católica do Paraná},
+	year = {2011},
+	address = {Paraná, Brasil}
+}
+
+@book{eves1995,
+	author = {Eves, Howard Whitley},
+	title = {Introdução à história da matemática},
+	publisher = {Unicamp},
+	year = {1995},
+	address = {Paraná, Brasil}
+}
+
+@mastersthesis{feijo2018,
+	author = {Feijó, Rachel Saffir Araújo Alves},
+	title = {Dificuldades e obstáculos no aprendizado de Trigonometria: um estudo com alunos do ensino médio do Distrito Federal},
+	school = {Universidade de Brasília},
+	year = {2018},
+	address = {Brasília, Brasil}
+}
+
+@mastersthesis{fortes2012,
+	author = {Fortes, Adriana Wachtmann Borges},
+	title = {Razões trigonométricas no triângulo retângulo: uma análise de erros no Ensino Médio},
+	school = {Universidade Franciscana},
+	year = {2012},
+	address = {Rio Grande do Sul, Brasil}
+}
+
+@article{gur2009,
+	author = {Hülya Gür},
+	title = {Trigonometry Learning},
+	journal = {New Horizons in Education},
+	volume = {57},
+	number = {1},
+	year = {2009},
+	publisher = {The Association of Science, Education and Technology},
+	address = {Sacaria, Turquia}
+}
+
+@book{ledurenriconiseibert2001,
+	author = {Ledur, Berenice Schwan and Enriconi, Maria Helena Selbach and Seibert, Tania Elisa},
+	title = {Trigonometria: por meio de construção de conceitos},
+	year = {2001},
+	publisher = {Editora Unisinos},
+	address = {Rio Grande do Sul, Brasil}
+}
+
+@phdthesis{mendes2001,
+	author = {Mendes, Iran Abreu},
+	title = {Ensino da Matemática por atividades: uma aliança entre o construtivismo e a história da matemática},
+	school = {Universidade Federal do Rio Grande do Norte},
+	address = {Rio Grande do Norte, Brasil},
+	year = {2001}
+}
+
+@conference{moore2009,
+	author = {Moore, Kevin C.},
+	title = {Trigonometry, technology, and didactic objects},
+	booktitle = {Proceedings of the 31st annual meeting of the North American Chapter of the International Group for the Psychology of Mathematics Education},
+	organization = {Georgia State University},
+	year = {2009},
+	address = {Georgia, Estados Unidos}
+}
+
+@mastersthesis{silva2011,
+	author = {Marlizete Franco da Silva},
+	title = {Trigonometria, modelagem e tecnologias: um estudo sobre uma sequência didática},
+	year = {2011},
+	school = {Pontifícia Universidade Católica de Minas Gerais},
+	address = {Minas Gerais, Brasil}
+}
+
+@conference{silvaneto2006,
+	author = {Dilvana Maria Melo da Silva and Mario Oliveira Thomaz Neto},
+	title = {Conhecimentos de estudantes do ensino médio sobre razões trigonométricas no triângulo retângulo},
+	year = {2006},
+	booktitle = {Simpósio Internacional de Pesquisa em Educação Matemática},
+	organization = {Universidade Federal de Pernambuco},
+	address = {Pernambuco, Brasil}
+}
+
+@book{roque2012,
+	author = {Tatiana Roque},
+	title = {História da matemática},
+	publisher = {Zahar},
+	year = {2012},
+	address = {Rio de Janeiro}
+}
+
+@article{weber2005,
+	author = {Keith Weber},
+	title = {Students’ understanding of trigonometric functions}, 
+	journal = {Mathematics Education Research Journal},
+	volume = {17},
+	number = {3},
+	pages = {91-112},
+	year ={2005},
+	publisher = {Mathematics Education Research Group of Australasia}
+}
+
+
+
+
+
+
+
+
+
+
+
+
