--- a/aluno.tex
+++ b/aluno.tex
@@ -21,7 +21,7 @@
 % \include{chapters/funcao-quadratica}
 % \include{chapters/sistemas}
 % \include{chapters/exponencial}
-% \include{chapters/logaritmos}
+\include{chapters/logaritmos}
 % \include{chapters/funcao-trigonometrica}
 % \include{chapters/estatistica1}
 % \include{chapters/estatistica2}
@@ -35,11 +35,11 @@
 % \include{chapters/investigacao}
 % \include{chapters/superficie}
 % \include{chapters/trigonometria}
-\include{chapters/combinatoria}
+% \include{chapters/combinatoria}
 % \include{chapters/computacional}
 % \include{chapters/transformacoes}
+% \include{chapters/livroaberto}
 
-% \include{chapters/logaritmosMD_bibliografia}
 % \renewcommand{\indexname}{Índice}
 % \printindex
 \end{document}
