--- a/professor.tex
+++ b/professor.tex
@@ -24,7 +24,7 @@
 % \include{chapters/funcao-quadratica}
 % \include{chapters/sistemas}
 % \include{chapters/exponencial}
-% \include{chapters/logaritmos}
+\include{chapters/logaritmos}
 % \include{chapters/funcao-trigonometrica}
 % \include{chapters/estatistica1}
 % \include{chapters/estatistica2}
@@ -38,9 +38,10 @@
 % \include{chapters/investigacao}
 % \include{chapters/superficie}
 % \include{chapters/trigonometria}
-\include{chapters/combinatoria}
+% \include{chapters/combinatoria}
 % \include{chapters/computacional}
 % \include{chapters/transformacoes}
+% \include{chapters/livroaberto}
 
 % \newgeometry{textwidth=840pt,outer=50pt, top=2cm}
 % \pagestyle{plain}
