--- a/aluno.tex
+++ b/aluno.tex
@@ -21,7 +21,7 @@
 % \include{chapters/funcao-quadratica}
 % \include{chapters/sistemas}
 % \include{chapters/exponencial}
-\include{chapters/logaritmos}
+% \include{chapters/logaritmos}
 % \include{chapters/funcao-trigonometrica}
 % \include{chapters/estatistica1}
 % \include{chapters/estatistica2}
@@ -30,7 +30,7 @@
 % \include{chapters/tales}
 % \include{chapters/semelhanca}
 % \include{chapters/financeira}
-% \include{chapters/ladrilhos}
+\include{chapters/ladrilhos}
 % \include{chapters/cartografia}
 % \include{chapters/investigacao}
 % \include{chapters/superficie}
