Compressão de capítulos
Alguns capítulos foram comprimidos para serem colocados na página do projeto

--- a/professor.tex
+++ b/professor.tex
@@ -21,7 +21,7 @@
 % \include{chapters/funcoes}
 % \include{chapters/taxa}
 % \include{chapters/funcao-afim}
-\include{chapters/funcao-quadratica}
+% \include{chapters/funcao-quadratica}
 % \include{chapters/sistemas}
 % \include{chapters/exponencial}
 % \include{chapters/logaritmos}
@@ -34,7 +34,7 @@
 % \include{chapters/semelhanca}
 % \include{chapters/financeira}
 % \include{chapters/ladrilhos}
-% \include{chapters/cartografia}
+\include{chapters/cartografia}
 % \include{chapters/investigacao}
 % \include{chapters/superficie}
 % \include{chapters/trigonometria}
